Name:                bridgewalker
Version:             0.1
Synopsis:            Bridgewalker
Description:         Bridgewalker
License:             AllRightsReserved
Author:              Jan Vornberger
Maintainer:          jan@uos.de
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable bridgewalker
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    aeson == 0.6.*,
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.11,
    data-lens >= 2.0.1 && < 2.11,
    data-lens-template >= 2.1 && < 2.2,
    heist >= 0.8 && < 0.9,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl >= 2 && < 3,
    snap == 0.9.*,
    snap-core   >= 0.9.2 && <0.10,
    snap-loader-static == 0.9.*,
    snap-server >= 0.9.2 && <0.10,
    text >= 0.11 && < 0.12,
    time >= 1.1 && < 1.5,
    websockets == 0.7.*,
    websockets-snap == 0.7.*,
    xmlhtml >= 0.1,
    bitcoin-rpc == 0.1.*,
    containers == 0.4.*,
    cereal == 0.3.*,
    base64-bytestring == 0.1.*,
    postgresql-simple == 0.1.*,
    pwstore-fast == 2.3.*,
    mtgoxapi == 0.1.*,
    filepath == 1.3.*,
    transformers == 0.3.*,
    errors == 1.2.*,
    ConfigFile == 1.0.*,
    watchdog == 0.2.*,
    ixset == 1.0.*,
    unordered-containers == 0.2.*,
    attoparsec == 0.10.*,
    random == 1.0.*,
    ghc-prim


  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.9.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
