Name:                bridgewalker
Version:             0.1
Synopsis:            Bridgewalker
Description:         Bridgewalker
License:             AllRightsReserved
Author:              Jan Vornberger
Maintainer:          jan@uos.de
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable bridgewalker
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends: base == 4.*
                 -- Wheezy: 4.5.0.0 (ghc)
                 , ghc-prim
                   -- Wheezy: 0.2.0.0 (ghc)
                 , bytestring >= 0.9.1 && < 0.11
                   -- Wheezy: 0.9.2.1 (ghc)
                , filepath == 1.3.*
                   -- Wheezy: 1.3.0.0 (ghc)
                 , old-locale == 1.0.*
                   -- Wheezy: 1.0.0.4 (ghc)
                 , containers == 0.4.*
                   -- Wheezy: 0.4.2.1 (ghc)
                 , time >= 1.1 && < 1.5
                   -- Wheezy: 1.4 (ghc)
                 , directory == 1.1.*
                   -- Wheezy: 1.1.0.2 (ghc)
                 , aeson == 0.6.*
                   -- Wheezy: 0.6.0.2 (libghc-aeson-dev)
                 , mtl >= 2 && < 3
                   -- Wheezy: 2.1.1 (libghc-mtl-dev)
                 , MonadCatchIO-transformers >= 0.2.1 && < 0.4
                   -- Wheezy: 0.3.0.0 (libghc-monadcatchio-transformers-dev)
                 , text == 0.11.*
                   -- Wheezy: 0.11.2.0 (libghc-text-dev)
                 , cereal == 0.3.*
                   -- Wheezy: 0.3.5.2 (libghc-cereal-dev)
                 , base64-bytestring == 0.1.*
                   -- Wheezy: 0.1.1.1 (libghc-base64-bytestring-dev)
                 , postgresql-simple == 0.1.*
                   -- Wheezy: 0.1.4.3 (libghc-postgresql-simple-dev)
                 , pwstore-fast == 2.2.*
                   -- Wheezy: 2.2 (libghc-pwstore-fast-dev)
                 , transformers == 0.3.*
                   -- Wheezy: 0.3.0.0 (libghc-transformers-dev)
                 , ConfigFile == 1.0.*
                   -- Wheezy: 1.0.6 (libghc-configfile-dev)
                 , ixset == 1.0.*
                   -- Wheezy: 1.0.3 (libghc-ixset-dev)
                 , unordered-containers == 0.2.*
                   -- Wheezy: 0.2.1.0 (libghc-unordered-containers-dev)
                 , attoparsec == 0.10.*
                   -- Wheezy: 0.10.1.1 (libghc-attoparsec-dev)
                 , random == 1.0.*
                   -- Wheezy: 1.0.1.1 (libghc-random-dev)
                 , regex-compat == 0.95.*
                   -- Wheezy: 0.95.1 (libghc-regex-compat-dev)
                 , lens == 3.7.*
                 , heist == 0.12.*
                 , snap == 0.12.*
                 , snap-core == 0.9.*
                 , snap-server == 0.9.*
                 , snap-loader-static == 0.9.*
                 , websockets == 0.7.*
                 , websockets-snap == 0.7.*
                 , xmlhtml >= 0.1
                 , either == 3.2.*
                    -- later versions of either seem to cause problems
                 , errors == 1.4.*
                 , async == 2.0.*
                 , metricsd-client == 0.1.*
                 , watchdog == 0.2.*
                 , bitcoin-rpc == 0.4.*
                 , mtgoxapi == 0.5.*

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.9.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
